chore: rename ValidateOf to GResultOf. (#136)
Added several methods to GResultOf to re-use some common patterns.